--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@ method="post" enctype="application/x-www-form-urlencoded">
 <input type="number" name="maxprice"/>
 Тип объявления
 <select  name="category"> 
+    <option value="" selected disabled hidden>Выберите тип</option>
     <option>IT, интернет, телеком</option>
     <option>Бытовые услуги</option>
     <option>Деловые услуги</option>
